add query_profile
